--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -1,11 +1,11 @@
-@(body: Html)
+@(title: String, body: Html)
 
 <!doctype html>
 
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <title>The HTML5 Herald</title>
+        <title>@title</title>
     </head>
 
     <body>
