messages list styling

--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -6,9 +6,37 @@
     <head>
         <meta charset="utf-8">
         <title>@title</title>
+
+        <style>
+                body {
+                    background-color: #DEE5DE;
+                    font-family: Roboto, Open Sans, Helvetica Neue, sans-serif;
+                    margin: 0;
+                }
+
+                .messages-container {
+                    max-width: 800px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    background-color: #F7FFF7;
+                    padding: 2rem;
+                    box-shadow: 0 0 20px 0 rgba(26, 83, 92, 0.8);
+                }
+
+                .message-body {
+                    color: #1A535C;
+                    padding-top: 0.5rem;
+                    padding-bottom: 2rem;
+                }
+
+                .message-date {
+                    font-size: small;
+                    color: #4ECDC4;
+                }
+        </style>
     </head>
 
     <body>
-        @body
+    @body
     </body>
 </html>
