--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -23,15 +23,42 @@
                     box-shadow: 0 0 20px 0 rgba(26, 83, 92, 0.8);
                 }
 
+                .message {
+                    display: grid;
+                    grid-template-rows: 1rem 1fr;
+                    grid-template-columns: 50px 1fr;
+                    grid-column-gap: 1rem;
+                }
+
+                .message-header {
+                    grid-column: 2;
+                    grid-row: 1;
+                }
+
                 .message-body {
+                    grid-column: 2;
+                    grid-row: 2;
                     color: #1A535C;
                     padding-top: 0.5rem;
                     padding-bottom: 2rem;
+                    white-space: pre-wrap;
+                }
+
+                .message-author {
+                    color: #4ECDC4;
+                    font-weight: bold;
+                    font-size: smaller;
                 }
 
                 .message-date {
                     font-size: small;
                     color: #4ECDC4;
+                }
+
+                .user-photo {
+                    grid-column: 1;
+                    grid-row: 1/3;
+                    border-radius: 50%;
                 }
         </style>
     </head>
