--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -60,6 +60,10 @@
                     grid-row: 1/3;
                     border-radius: 50%;
                 }
+
+                .message-attachments {
+                    grid-column: 2;
+                }
         </style>
     </head>
 
