--- a/src/main/twirl/messages.scala.html
+++ b/src/main/twirl/messages.scala.html
@@ -1,24 +1,37 @@
 @import com.vk.api.sdk.objects.messages.Message
+@import com.vk.api.sdk.objects.messages.MessageAttachmentType
+@import com.vk.api.sdk.objects.photos.Photo;
 @import com.vk.api.sdk.objects.users.User
 @import com.atanana.vk_digest.ui.UiUtils
 
 @(messages: List[Message], users: Map[Int, User])
 
 <div class="messages-container">
-    @for(message <- messages) {
-        @defining(users(message.getUserId)) { user: User =>
-            <div class="message">
-                <img src="@user.getPhoto50" alt="@user.getFirstName @user.getLastName" class="user-photo">
-                <div class="message-header">
-                    <span class="message-author">
-                        @user.getFirstName @user.getLastName
-                    </span>
-                    <span class="message-date">
-                    @UiUtils.messageDateFormat(message.getDate)
-                    </span>
-                </div>
-                <div class="message-body">@message.getBody</div>
+@for(message <- messages) {
+    @defining(users(message.getUserId)) { user: User =>
+        <div class="message">
+            <img src="@user.getPhoto50" alt="@user.getFirstName @user.getLastName" class="user-photo">
+            <div class="message-header">
+                <span class="message-author">
+                    @user.getFirstName @user.getLastName
+                </span>
+                <span class="message-date">
+                @UiUtils.messageDateFormat(message.getDate)
+                </span>
             </div>
-        }
+            <div class="message-body">@message.getBody</div>
+            @if(message.getAttachments != null) {
+                <div class="message-attachments">
+                @for(attachment <- message.getAttachments) {
+                    @if(attachment.getType == MessageAttachmentType.PHOTO) {
+                        @defining(attachment.getPhoto) { photo: Photo =>
+                            <img src="@photo.getPhoto604" alt="@photo.getText">
+                        }
+                    }
+                }
+                </div>
+            }
+        </div>
     }
+}
 </div>
