--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -28,6 +28,7 @@
                     grid-template-rows: 1rem 1fr;
                     grid-template-columns: 50px 1fr;
                     grid-column-gap: 1rem;
+                    margin-bottom: 1.5rem;
                 }
 
                 .message-header {
@@ -40,7 +41,7 @@
                     grid-row: 2;
                     color: #1A535C;
                     padding-top: 0.5rem;
-                    padding-bottom: 2rem;
+                    padding-bottom: 0.5rem;
                     white-space: pre-wrap;
                 }
 
