--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -64,6 +64,10 @@
 
                 .message-attachments {
                     grid-column: 2;
+                    border-left: 3px #4ECDC4 solid;
+                    padding-top: 0.5rem;
+                    padding-left: 0.5rem;
+                    padding-bottom: 0.5rem;
                 }
         </style>
     </head>
