show attached messages

--- a/src/main/twirl/main.scala.html
+++ b/src/main/twirl/main.scala.html
@@ -69,6 +69,19 @@
                     padding-left: 0.5rem;
                     padding-bottom: 0.5rem;
                 }
+
+                .message-attachments .messages-container {
+                    max-width: 600px;
+                    margin-left: 0;
+                    margin-right: 0;
+                    background-color: #F7FFF7;
+                    padding: 0;
+                    box-shadow: none;
+                }
+
+                .message-attachments .message:last-child {
+                    margin-bottom: 0;
+                }
         </style>
     </head>
 
